--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -12,10 +12,11 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7295;http://localhost:5197",
+      "applicationUrl": "https://localhost:3000;http://localhost:5197",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "hotReloadProfile": "aspnetcore"
     },
     "IIS Express": {
       "commandName": "IISExpress",
